2004-01-08  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add libs to CLEANFILES
	Set lib*_g_a_SOURCES = lib*_a_SOURCES.

2004-01-08  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build lib*$(LIB_VARIANT).a instead of
	$(ARCH)/lib*.a.

2004-01-07  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build library using EXTRA_LIBRARIES and automake rules.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add $(dirstamp) to compilation rules.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add $(dirstamp) to preinstallation rules.

2003-11-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/rpc/Makefile.am, src/xdr/Makefile.am, src/Makefile.am:
	Removed.
	* Makefile.am: Merge-in src/rpc/Makefile.am, src/xdr/Makefile.am,
	src/Makefile.am.
	Various fixes. Reformat.

2003-11-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rpc/rpc.hinclude/rpc/rpc.h: Rename struct
	rtems_rpc_task_variables into struct _rtems_rpc_task_variables
	(Avoid symbol conflict between struct and variable).
	struct _rtems_rpc_task_variables *rtems_rpc_task_variables;
	Reflect changes above.
	* src/rpc/clnt_perror.c, src/rpc/clnt_raw.c, src/rpc/clnt_simple.c,
	src/rpc/rpcdname.c, src/rpc/rtems_rpc.c, src/rpc/svc.c, 
	src/rpc/svc_auth.c, src/rpc/svc_raw.c, src/rpc/svc_simple.c:
	Reflect changes above.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/rpc/Makefile.am: Remove __P from AM_CPPFLAGS.
	Rely on sys/cdefs.h providing it.
	* src/xdr/Makefile.am: Remove __P from AM_CPPFLAGS.
	Rely on sys/cdefs.h providing it.

2003-09-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	* include/Makefile.am: Remove.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged-in into ../configure.ac)