@@ -1,3 +1,10 @@
+2004-01-11  Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Include compile.am, again.
+	Put man-pages into EXTRA_DIST to work around automake not
+	distributing conditionally installed *_MANS.
+	Distribute include/rpcsvc.
+
 2004-01-08  Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Add libs to CLEANFILES
